--- a/templates/post.html
+++ b/templates/post.html
@@ -88,7 +88,7 @@
 <body>
     <div class="wrapper">
         <div class="heading">
-            <h1>WELCOME TO MBAYA'S BLOG SITE</h1>
+            <h1>{{clicked_posts.title}}</h1>
         </div> 
             <div class="posts"> 
                 <div class="post">
